po: update po/sr_RS@latin/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 16:10+0000\n"
+"PO-Revision-Date: 2017-02-07 15:25+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1612,7 +1612,7 @@ msgstr ""
 msgid ""
 "Description of this membership type for internal use. May include "
 "eligibility, benefits, terms, etc."
-msgstr ""
+msgstr "Opis ovog tipa članstva za internu upotrebu. Može da uključuje dostupnost, prednosti, uslove, itd."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
@@ -1646,7 +1646,7 @@ msgstr ""
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
 "Duration of this membership (e.g. 30 days, 2 months, 5 years, 1 lifetime)"
-msgstr ""
+msgstr "Trajanje ovog članstva (npr. 30 dana, 2 meseca, 5 godina, doživotno)"
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
