--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-05 06:24+0000\n"
+"PO-Revision-Date: 2017-02-07 23:57+0000\n"
 "Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -1224,7 +1224,7 @@ msgstr "Aperçu de l'envoi"
 
 msgctxt "menu"
 msgid "Mailing Report"
-msgstr "Rapport de mailing"
+msgstr "Rapport d'envoi massif"
 
 msgctxt "menu"
 msgid "Forward Mailing"
