po: update po/es_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-components.po
+++ b/po/es_ES/common-components.po
@@ -13,11 +13,12 @@
 # Fernando <badeaselche@hotmail.com>, 2012
 # francescbassas <francesc@babu.cat>, 2014-2015
 # francescbassas <francesc@babu.cat>, 2014
-# ixiam <info@ixiam.com>, 2013,2016
+# ixiam <info@ixiam.com>, 2013,2016-2017
 # Irene Estefania <iestefania@ndi.org>, 2015
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2013
 # ixiam <info@ixiam.com>, 2013
+# Jorge Marino <jorgemarinosanchez@gmail.com>, 2017
 # jvalero <juan@jvalero.org>, 2011
 # jvalero <juan@jvalero.org>, 2011
 # carmyman <manuel.rubio.p@gmail.com>, 2013
@@ -29,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-08 18:55+0000\n"
+"Last-Translator: Jorge Marino <jorgemarinosanchez@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2219,15 +2220,15 @@ msgstr "Balance pendiente"
 
 #: CRM/Admin/Form/ScheduleReminders.php CRM/Contribute/Form/Task/PDF.php
 msgid "From Email"
-msgstr ""
+msgstr "Correo electrónico De"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Ascending"
-msgstr ""
+msgstr "Ascendente"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Descending"
-msgstr ""
+msgstr "Descendente"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -2238,7 +2239,7 @@ msgstr "Cantidad de pagos"
 #: CRM/Contribute/Form/Contribution/Confirm.php
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
-msgstr ""
+msgstr "Hacer el pago"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
@@ -2252,7 +2253,7 @@ msgstr "No tiene permiso para acceder a esta página."
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Show Recurring Donation Start Date?"
-msgstr ""
+msgstr "Mostrar fecha de inicio de las donaciones recurrentes?"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
@@ -2312,4 +2313,4 @@ msgstr "Aperturas"
 #: CRM/Pledge/BAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Next Payment Amount"
-msgstr ""
+msgstr "Siguiente monto del pago"
