--- a/po/es_ES/batch.po
+++ b/po/es_ES/batch.po
@@ -7,6 +7,7 @@
 # ixiam <info@ixiam.com>, 2013
 # Fernando <badeaselche@hotmail.com>, 2012
 # ixiam <info@ixiam.com>, 2013,2016
+# Jorge Marino <jorgemarinosanchez@gmail.com>, 2017
 # Marti Prat <m.prat@ixiam.com>, 2015
 # Fernando <badeaselche@hotmail.com>, 2012
 # Veruska Perinotto <reaching.out@gmail.com>, 2015
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-08 18:52+0000\n"
+"Last-Translator: Jorge Marino <jorgemarinosanchez@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -246,7 +247,7 @@ msgstr "Campos de tipo archivo o de autocompletar no estan soportados en el perf
 
 #: CRM/Batch/Form/Entry.php
 msgid "Transaction ID must be unique within the database"
-msgstr ""
+msgstr "El ID de transacción debe ser único dentro de la base de datos"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
