po: update po/es_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -13,10 +13,11 @@
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2014-2015
 # Fran Sanchez <fsanchezmac@gmail.com>, 2013
-# ixiam <info@ixiam.com>, 2013,2015-2016
+# ixiam <info@ixiam.com>, 2013,2015-2017
 # ixiam <info@ixiam.com>, 2011
 # ixiam <info@ixiam.com>, 2011,2013
 # ixiam_jose <jrombini@hotmail.com>, 2011
+# Jorge Marino <jorgemarinosanchez@gmail.com>, 2017
 # ixiam_jose <jrombini@hotmail.com>, 2011
 # Manuel Jesús Rodriguez <mjrodriguezarabi@yahoo.es>, 2013
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
@@ -32,8 +33,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 15:57+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2017-02-08 18:51+0000\n"
+"Last-Translator: Jorge Marino <jorgemarinosanchez@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3057,7 +3058,7 @@ msgid ""
 "register to use the USPS service at <a href='%1' target='_blank'>%1</a>. If "
 "you are approved, they will provide you with a User ID and the URL for the "
 "service."
-msgstr "CiviCRM incluye un plugin opcional para la conexión con el servicio Web de Normalización de Direcciones del Servicio Postal de Estados Unidos (USPS) . Es necesario registrarse para utilizar el servicio de USPS en<a href='%1' target='_blank'>%1</a>. Si es apruebado, se le proporcionará un ID de usuario y la dirección URL para el servicio."
+msgstr "CiviCRM incluye un plugin opcional para la conexión con el servicio Web de Normalización de Direcciones del Servicio Postal de Estados Unidos (USPS) . Es necesario registrarse para utilizar el servicio de USPS en <a href='%1' target='_blank'>%1</a>. Si se aprueba, le proporcionarán un ID de usuario y la dirección URL del servicio."
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid ""
@@ -3637,7 +3638,7 @@ msgid ""
 "provinces are available in the State/Province selection field <strong>for "
 "Custom Fields</strong> or for Profile forms which do NOT include a Country "
 "field."
-msgstr "Los listados de provincia/estado se rellenan dinámicamente en función al País seleccionado para todos los formularios de edición de contacto, así como para los formularios de <strong>Perfil que incluyen tanto un País como un campo de Estado/Provincia </ strong>. Esta configuración controla qué Estados de los países y/o provincias están disponibles en la selección de campo de Estado/Provincia en <strong>Campos Personalizados </ strong> o en los formularios de Perfil que NO incluyen un campo de País."
+msgstr "Los listados de provincia/estado se rellenan dinámicamente en función del País seleccionado para todos los formularios de edición de contacto, así como para los formularios de <strong>Perfil que incluyen tanto un País como un campo de Estado/Provincia</strong>. Esta configuración controla qué estados de los países y/o provincias están disponibles en la selección de campo de Estado/Provincia en <strong>Campos Personalizados</strong> o en los formularios de Perfil que NO incluyen un campo de País."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Multiple Languages Support"
@@ -4347,7 +4348,7 @@ msgid ""
 "Use <strong>Word Replacements</strong> to change all occurrences of a word "
 "or phrase in CiviCRM screens (e.g. replace all occurences of 'Contribution' "
 "with 'Donation')."
-msgstr "Utilice <strong>Reemplazos de Palabra </ strong> para cambiar todas las apariciones de una palabra o frase en las pantallas de CiviCRM (por ejemplo, reemplazar todas las apariciones de \"Contribución\" con \"Donación\")."
+msgstr "Utilice <strong>Reemplazos de Palabra</strong> para cambiar todas las apariciones de una palabra o frase en las pantallas de CiviCRM (por ejemplo, reemplazar todas las apariciones de 'Contribución' con 'Donación')."
 
 #: templates/CRM/Admin/Form/WordReplacements.tpl
 #: templates/CRM/Admin/Page/Options.tpl
@@ -4526,7 +4527,7 @@ msgid ""
 "<strong>set of Data</strong> that the operation can be performed on (e.g. a "
 "group of contacts), and a <strong>Role</strong> that has permission to do "
 "this operation. Refer to the %1 for more info."
-msgstr "ACL (Access Control Lists) le permite controlar el acceso a los datos CiviCRM. Un ACL consiste en una <strong>Operación </ strong> (por ejemplo, \"Ver\" o \"Editar\"), un <strong> Conjunto de Datos</ strong> en donde la operación se puede realizar (por ejemplo, un grupo de contactos), y un <strong>Rol </ strong> que tiene permiso para realizar esta operación. Consulte %1 para más información."
+msgstr "ACL (Access Control Lists) le permite controlar el acceso a los datos CiviCRM. Un ACL consiste en una <strong>Operación</strong> (por ejemplo, 'Ver' o 'Editar'), un <strong>Conjunto de Datos</strong> en donde la operación se puede realizar (por ejemplo, un grupo de contactos), y un <strong>Rol</strong> que tiene permiso para realizar esta operación. Consulte %1 para más información."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "Note that a CiviCRM ACL Role is not related to the Drupal Role."
@@ -4595,7 +4596,7 @@ msgstr "Use los siguientes pasos si necesita controlar la Visualización y/o Edi
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "1. Manage Roles"
-msgstr "Administrar Roles"
+msgstr "1. Administrar Roles"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -5525,7 +5526,7 @@ msgid ""
 "grant permission to roles <a href='%1'>here</a>... and you can assign "
 "role(s) to CiviCRM contacts who are users of your site <a "
 "href='%2'>here</a>."
-msgstr "A continuación puede adicionar o modificar sus Roles ACL. Puede crear ACLs y conceder permisos a roles <a href='%1'>acá</a>... y también puede asignar roles a los contactos del CiviCRM que son usuarios de sus sitio <a href='%2'>acá</a>."
+msgstr "A continuación puede añadir o modificar sus Roles ACL. Puede crear ACLs y conceder permisos a roles <a href='%1'>aquí</a>... y también puede asignar un rol(es) a los contactos del CiviCRM que son usuarios de sus sitio <a href='%2'>aquí</a>."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
@@ -5619,7 +5620,7 @@ msgstr "Añadir Estatus de participante"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Refer to the following documentation:"
-msgstr "Referir a la siguiente documentación:"
+msgstr "Consulte la siguiente documentación:"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid ""
@@ -6132,7 +6133,7 @@ msgid ""
 "installation. You must then assign an active Payment Processor to each "
 "<strong>Online Contribution Page</strong> and each paid "
 "<strong>Event</strong>."
-msgstr "Puede configurar uno o más Procesadores de Pago para su instalación CiviCRM. A continuación, debe asignar un Procesador de Pago activo que opere en cada <strong> Página de Contribución en Línea </ strong> y en cada  <strong> Evento</ strong> pago."
+msgstr "Puede configurar uno o más Procesadores de Pago para su instalación de CiviCRM. A continuación, debe asignar un Procesador de Pago activo que opere en cada <strong>Página de Contribución en Línea</strong> y en cada <strong>Evento</strong> de pago."
 
 #: templates/CRM/Admin/Page/PaymentProcessor.tpl
 msgid "Processor Type"
@@ -6455,11 +6456,11 @@ msgstr "Los valores relativos mensuales se calculan en base a los meses transcur
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Upload Document"
-msgstr ""
+msgstr "Cargar Documento"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Please upload document"
-msgstr ""
+msgstr "Por favor cargue el documento"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
@@ -6487,7 +6488,7 @@ msgstr "Nivel superior"
 
 #: CRM/Admin/Form/Options.php
 msgid "Value field Data Type mismatch"
-msgstr ""
+msgstr "Valor del campo Tipo de datos no coincidente"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
@@ -6535,7 +6536,7 @@ msgstr "Usar el idioma en uso"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Illegal stack size. Use values between 1 and %1."
-msgstr ""
+msgstr "Tamaño de pila no válido. Utilice valores entre 1 y %1."
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
@@ -6552,7 +6553,7 @@ msgstr "CKEditor guardado"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "%1: Welcome (External)"
-msgstr ""
+msgstr "%1: Bienvenido (Externo)"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
@@ -6608,11 +6609,11 @@ msgstr "Dejar en blanco para ejecutarlo en la siguiente frecuencia de ejecución
 msgid ""
 "Compose a message on-screen for general use in emails or document output, or"
 " upload a pre-composed document for mail-merge."
-msgstr ""
+msgstr "Componga un mensaje en pantalla para su uso general en correos electrónicos o en la salida de documentos, o cargue un documento precompuesto para la combinación de correspondencia."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Upload the document in .docx or .odt format."
-msgstr ""
+msgstr "Cargue el documento en formato .docx o .odt."
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
@@ -6630,7 +6631,7 @@ msgid ""
 "Changing the Prior Financial Period may result in problems calculating "
 "closing account balances accurately and / or exporting of financial "
 "transactions. Do you want to proceed?"
-msgstr ""
+msgstr "Cambiar el Período Financiero Anterior puede resultar en problemas para calcular los saldos de cuentas de cierre con precisión y / o exportación de transacciones financieras. ¿Quieres proceder?"
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -6709,7 +6710,7 @@ msgid ""
 "have privileges to create triggers and views (in MySQL 5.0 – and in MySQL "
 "5.1 if binary logging is enabled – this means the SUPER privilege). This "
 "install either does not seem to have the required privilege enabled."
-msgstr ""
+msgstr "Para usar esta funcionalidad, el usuario de la instalación de la base de datos debe tener privilegios para crear disparadores y vistas (en MySQL 5.0 y MySQL 5.1 si el registro binario está habilitado, esto significa el privilegio SUPER). Esta instalación no parece tener el privilegio requerido habilitado."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
@@ -6730,7 +6731,7 @@ msgstr "Estas opciónes se usan para configurar las propiedades del correo opcio
 msgid ""
 "If enabled, CiviCRM will allow users to submit profiles from external sites."
 " This is disabled by default to limit abuse."
-msgstr ""
+msgstr "Si está habilitado, CiviCRM permitirá a los usuarios enviar perfiles desde sitios externos. Esto está desactivado por defecto para limitar el abuso."
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
