--- a/po/es_ES/report.po
+++ b/po/es_ES/report.po
@@ -10,7 +10,7 @@
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
 # francescbassas <francesc@babu.cat>, 2014-2016
-# ixiam <info@ixiam.com>, 2013,2016
+# ixiam <info@ixiam.com>, 2013,2016-2017
 # Irene Estefania <iestefania@ndi.org>, 2015
 # iWi development <iwidevelopment@gmail.com>, 2012
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-28 12:36+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-08 11:53+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2067,7 +2067,7 @@ msgstr "Actualmente no existen Plantilla de Informes"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Save a copy..."
-msgstr ""
+msgstr "Guardar una copia..."
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "(Copy) "
@@ -2384,7 +2384,7 @@ msgstr ""
 
 #: CRM/Report/Info.php
 msgid "Edit all private reports"
-msgstr ""
+msgstr "Editar todos los informes privados"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
