--- a/po/es_ES/pledge.po
+++ b/po/es_ES/pledge.po
@@ -7,7 +7,7 @@
 # ixiam <info@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2014
 # francescbassas <francesc@babu.cat>, 2014
-# ixiam <info@ixiam.com>, 2013,2016
+# ixiam <info@ixiam.com>, 2013,2016-2017
 # ixiam <info@ixiam.com>, 2013
 # Javier Monterroso <jmonterroso@ndi.org>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-08 11:43+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -822,7 +822,7 @@ msgstr "¿Exponer el intervalo de la frecuencia?"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Allow Edits to Recurring Donation Start Date?"
-msgstr ""
+msgstr "Permitir ediciones en la fecha de inicio de las donaciones recurrentes?"
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
