--- a/po/es_ES/countries.po
+++ b/po/es_ES/countries.po
@@ -8,6 +8,7 @@
 # ixiam <info@ixiam.com>, 2016
 # iWi development <iwidevelopment@gmail.com>, 2012
 # ixiam <info@ixiam.com>, 2013
+# Jorge Marino <jorgemarinosanchez@gmail.com>, 2017
 # kaotik <kaotiko@gmail.com>, 2011
 # kaotik <kaotiko@gmail.com>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-08 18:35+0000\n"
+"Last-Translator: Jorge Marino <jorgemarinosanchez@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1055,20 +1056,20 @@ msgstr "Santo Martín (Parte de Francia)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Islas Vírgenes Británicas"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Costa de Marfil"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Irán, República Islámica"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Macedonia, República"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Territorio Palestino"
