po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-20 18:39+0000\n"
+"PO-Revision-Date: 2017-02-08 13:56+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2564,7 +2564,7 @@ msgstr "Contacttype Beschrijving"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Image URL"
-msgstr "Contacttype Afbeelding URL"
+msgstr "Contacttype afbeeldings-URL"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Parent"
@@ -24859,11 +24859,11 @@ msgstr "Geef hier aan of de herinnering elk jaar verzonden moet worden."
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Opportunistic Flush"
-msgstr ""
+msgstr "Opportunistische flush"
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Cron Flush"
-msgstr ""
+msgstr "Cron flush"
 
 #: CRM/Contact/BAO/GroupNestingCache.php
 msgid "We detected a cycle which we can't handle. aborting"
@@ -25738,7 +25738,7 @@ msgid ""
 "Count data for smart groups is not currently calculated. You may click "
 "Update Smart Groups to generate it. Be aware this can cause significant "
 "server load"
-msgstr ""
+msgstr "De gegevens voor smartgroepen zijn nog niet bepaald. U kunt klikken op Tellingen smartgroepen bijwerken, dat kan wel een forse belasting van uw systeem zijn."
 
 #: CRM/Logging/ReportDetail.php
 msgid "Are you sure you want to revert all changes?"
@@ -25758,11 +25758,11 @@ msgstr "U heeft geen toegang tot deze pagina"
 
 #: CRM/Price/Form/Option.php
 msgid "Pre Option Help"
-msgstr ""
+msgstr "Help optie vooraf"
 
 #: CRM/Price/Form/Option.php
 msgid "Post Option Help"
-msgstr ""
+msgstr "Help optie achteraf"
 
 #: CRM/Profile/Form/Edit.php
 msgid ""
@@ -26128,7 +26128,7 @@ msgstr "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
 msgid ""
 "The Following Option Values contain value fields that do not match the Data Type of the Option Group</p>\n"
 "        <p><table><tbody><th>Option Group</th><th>Option Value</th></tbody><tbody>"
-msgstr ""
+msgstr "De volgende optiewaarden bevatten waarden die niet overeenkomen met het datatype van de optiegroep</p>\n        <p><table><tbody><th>Optiegroep</th><th>Optiewaarde</th></tbody><tbody>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "</tbody></table></p>"
@@ -26136,7 +26136,7 @@ msgstr "</tbody></table></p>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "Option Values with problematic Values"
-msgstr ""
+msgstr "Optiewaarden met problematische waarden"
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Private Files Readable"
@@ -26155,11 +26155,11 @@ msgid ""
 "Warning: External profile support (aka \"HTML Snippet\" support) is enabled "
 "in <a href=\"%1\">system settings</a>. This setting may be prone to abuse. "
 "If you must retain it, consider HTTP throttling or other protections."
-msgstr ""
+msgstr "Waarschuwing: Ondersteuning van externe profielen (\"HTML Snippet\") is <a href=\"%1\">ingeschakeld</a>. Dit kan tot misbruik leiden. Als u het moet gebruiken, overweeg dan om HTTP-throttling, dus aanvraagbeperking, of andere beschermingen toe te passen."
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Remote Profiles Enabled"
-msgstr ""
+msgstr "Externe profielen ingeschakeld"
 
 #: CRM/Utils/Check.php
 msgid "View details and manage alerts"
@@ -26203,7 +26203,7 @@ msgstr "%1"
 
 #: CRM/Utils/ReCAPTCHA.php
 msgid "Please go back and complete the CAPTCHA at the bottom of this form."
-msgstr ""
+msgstr "Ga a.u.b. terug en vul het CAPTCHA onderaan het scherm in."
 
 #: CRM/Utils/Rule.php
 msgid ""
@@ -26249,7 +26249,7 @@ msgstr "Inklappen"
 
 #: js/jquery/jquery.dashboard.js
 msgid "You can re-add it by clicking the \"Configure Your Dashboard\" button."
-msgstr ""
+msgstr "U kunt het opnieuw toevoegen door te klikken op de knop \"Configureer uw startpagina\"."
 
 #: js/jquery/jquery.dashboard.js
 msgid "\"%1\" Removed"
@@ -26274,7 +26274,7 @@ msgid ""
 "contact. Any custom data associated with de-selected subtype will be removed"
 " as long as the contact does not have a contact subtype still selected. "
 "Click OK to proceed, or Cancel to review your changes before saving."
-msgstr ""
+msgstr "Een of meerdere subtypes an dit contact zijn niet meer geselecteerd.  Een aangepast gegeven behorend bij een van deze subtypes zal worden verwijderd. Bevestig om door te gaan of breek af om uw wijziging aan te passen."
 
 #: templates/CRM/Contact/Form/DedupeFind.tpl
 msgid ""
@@ -26282,7 +26282,7 @@ msgid ""
 "      If you limit by group then it will look for matches with that group both inside and outside of the group.\n"
 "      You can also limit the contacts in the group to be matched by specifying the number of contacts to match. This can be done in conjunction with a group or separately and is recommended for performance reasons.\n"
 "    "
-msgstr ""
+msgstr "U kunt alle contacten doorzoeken naar duplicaten of de contacten eerst beperken voor een efficiëntere verwerking.\nAls u op groep beperkt dan wordt er gekeken naar overeenkomsten met die groep zowel in als buiten de groep.\nU kunt ook contacten in de groep beperken op het aantal overeenkomende in de groep. Dit kan in combinatie met een groep of afzonderlijk, dit wordt vanwege de performance aanbevolen."
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid ""
@@ -26344,7 +26344,7 @@ msgstr "Weergave-instellingen voor resultaten"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid "Select a pre-existing template, or upload a document for mail merge."
-msgstr ""
+msgstr "Selecteer een bestaand sjabloon of upload een document voor het samenvoegen van de e-mail."
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid "Supported file formats: %1"
@@ -26461,7 +26461,7 @@ msgid ""
 "Warning: You have chosen to remove one or more subtypes. This will cause any"
 " custom data records associated with those subtypes to be removed as long as"
 " the contact does not have a contact subtype still selected."
-msgstr ""
+msgstr "Waarschuwing: U wilt een of meer subtypes verwijderen. Dit betekent dat er aangepaste gegevens behorend bij de contacten met deze subtypes zal worden verwijderd."
 
 #: templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
@@ -26582,7 +26582,7 @@ msgstr "Document afdrukken/samenvoegen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export letters and other printable documents."
-msgstr ""
+msgstr "Brieven en afdrukbare documenten exporteren"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact Deleted by Merge"
@@ -27047,16 +27047,16 @@ msgstr "Instellingen migreren naar %1"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Upgrade Add Help Pre and Post Fields to price value table"
-msgstr ""
+msgstr "Bijwerken helpteksten van de prijswaardentabel"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Alter index and type for image URL"
-msgstr ""
+msgstr "Wijzig index en type van afbeeldings-URL"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Fill in setting \"remote_profile_submissions\""
-msgstr ""
+msgstr "Voer de instelling externe profiel inzending in"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Add Data Type column to civicrm_option_group"
-msgstr ""
+msgstr "Datatype aan civicrm-optiegroep toevoegen"
