po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -29,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-08 00:00+0000\n"
+"PO-Revision-Date: 2017-02-08 15:34+0000\n"
 "Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -18191,7 +18191,7 @@ msgstr "Ensemble"
 
 #: templates/CRM/Custom/Page/Group.tpl
 msgid "Style"
-msgstr "Tigre"
+msgstr "Style"
 
 #: templates/CRM/Custom/Page/Group.tpl
 msgid "All Contact Types"
