po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 12:50+0000\n"
+"PO-Revision-Date: 2017-02-08 15:37+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2076,7 +2076,7 @@ msgstr "%1 nije važeći operater"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search/Criteria.php
 msgid "Search in Trash"
-msgstr ""
+msgstr "Pretraži u kanti"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/DAO/Contact.php
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/Search/Custom/DateAdded.php
@@ -3260,11 +3260,11 @@ msgstr "Email nije važeći"
 
 #: CRM/Contact/Form/Edit/Email.php
 msgid "On Hold Bounce"
-msgstr ""
+msgstr "Zadržani odbijeni"
 
 #: CRM/Contact/Form/Edit/Email.php
 msgid "On Hold Opt Out"
-msgstr ""
+msgstr "Zadržani isključeni"
 
 #: CRM/Contact/Form/Edit/Email.php
 msgid "Signature (Text)"
@@ -3446,7 +3446,7 @@ msgid ""
 "The selected pair of contacts are marked as non duplicates. If these records"
 " should be merged, you can remove this exception on the <a "
 "href=\"%1\">Dedupe Exceptions</a> page."
-msgstr ""
+msgstr "Odabrani par kontakata je označen kao ne-duplikat. Ukoliko ovi zapisi treba da se spoje, uklonite ovaj izuzetak na <a href=\"%1\">Izuzeci deduplikacije</a> stranici."
 
 #: CRM/Contact/Form/Merge.php
 msgid ""
@@ -4686,7 +4686,7 @@ msgstr "Odaberi lokaciju"
 #: CRM/Contact/Form/Task/Label.php
 msgid ""
 "Do not print labels for contacts with \"Do Not Mail\" privacy option checked"
-msgstr ""
+msgstr "Ne štampaj oznake za kontakte koji imaju štikliranu opciju privatnosti \"Ne šalji poštu\""
 
 #: CRM/Contact/Form/Task/Label.php
 msgid "Merge labels for contacts with the same address"
@@ -4710,7 +4710,7 @@ msgstr "Ova adresa nema podatke o geografskoj širini/dužini i ne može biti ma
 msgid ""
 "You need to configure a Mapping Provider before using this feature "
 "(Administer > System Settings > Mapping and Geocoding)."
-msgstr ""
+msgstr "Morate podesiti maping provajdera pre korišćenja ove funkcionalnosti (Administracija  > Sistemska podešavanja > Mapiranje i Geokoding)"
 
 #: CRM/Contact/Form/Task/Map.php
 msgid "Event Info"
@@ -4975,14 +4975,14 @@ msgstr "Grupa sačuvana"
 
 #: CRM/Contact/Form/Task/Unhold.php
 msgid "Unhold Email"
-msgstr ""
+msgstr "Isključi zadržavanje emaila"
 
 #: CRM/Contact/Form/Task/Unhold.php
 msgid "%count email was found on hold and updated."
 msgid_plural "%count emails were found on hold and updated."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Pronađen je i ažuriran %count zadržan email."
+msgstr[1] "Pronađeno je i ažurirano %count zadržanih emailova."
+msgstr[2] "Pronađeno je i ažurirano %count zadržanih emailova."
 
 #: CRM/Contact/Form/Task/Unhold.php
 msgid "Emails Restored"
@@ -4991,9 +4991,9 @@ msgstr "Email povraćen"
 #: CRM/Contact/Form/Task/Unhold.php
 msgid "The selected contact does not have an email on hold."
 msgid_plural "None of the selected contacts have an email on hold."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Odabrani kontakt nema zadržan email."
+msgstr[1] "Odabrani kontakti nemaju zadržan email."
+msgstr[2] "Nijedan od odabranih kontakata nema zadržani email."
 
 #: CRM/Contact/Form/Task/Unhold.php
 msgid "No Emails to Restore"
@@ -5614,7 +5614,7 @@ msgstr "Štampa PDF pisma za kontakte"
 
 #: CRM/Contact/Task.php
 msgid "Unhold Emails"
-msgstr ""
+msgstr "Isključi zadržavanje emailova"
 
 #: CRM/Contact/Task.php
 msgid "Alter Contact Communication Preferences"
@@ -5693,7 +5693,7 @@ msgid ""
 "The following contact(s) have address records which were shared with the "
 "address you removed from this contact. These address records are no longer "
 "shared - but they have not been removed or altered."
-msgstr ""
+msgstr "Sledeći kontakt(i) je delio zapise o adresi sa adresom koju ste upravo obrisali iz ovog kontakta. Adrese više neće biti podeljene, ali nisu obrisane niti izmenjene."
 
 #: CRM/Core/BAO/CMSUser.php
 msgid "Synchronize Users to Contacts completed."
@@ -6237,7 +6237,7 @@ msgstr "Traženi profil (gid=%1) je isključen ILI nije podešen da se koristi u
 
 #: CRM/Core/BAO/UFGroup.php
 msgid "Dynamic Form Creator"
-msgstr ""
+msgstr "Dynamic Form Creator"
 
 #: CRM/Core/BAO/UFGroup.php
 msgid "Custom %1"
@@ -6355,7 +6355,7 @@ msgid ""
 "href='%1'>Administrator >> System Settings >> Misc</a>. It should support "
 "'upload_max_size' as defined in PHP.ini.Please check with your system "
 "administrator."
-msgstr ""
+msgstr "Beleška: Verifikujte konfiguraciju Maksimalne veličine fajla (u MB) <a href='%1'>Administrator >> Sistemska podešavanja >> Ostalo</a>. Ovo podešavanje treba da bude u skladu sa definicijom 'upload_max_size' u PHP.ini. Proverite sa vašim administratorom."
 
 #: CRM/Core/Config.php
 msgid ""
@@ -6377,27 +6377,27 @@ msgstr "Nema važećeg podešavanja smtp servera. Kliknite na <a href='%1'>Admin
 msgid ""
 "There is no valid sendmail path setting. Click <a href='%1'>Administer >> "
 "System Setting >> Outbound Email</a> to set the sendmail server."
-msgstr ""
+msgstr "Nema važećeg podešavanja sendmail putanje. Kliknite na <a href='%1'>Administacija >> Sistemska podešavanja >> Odlazna pošta</a> da podesite sendmail server."
 
 #: CRM/Core/Config.php
 msgid ""
 "Outbound mail has been disabled. Click <a href='%1'>Administer >> System "
 "Setting >> Outbound Email</a> to set the OutBound Email."
-msgstr ""
+msgstr "Odlazna pošta je isključena. Kliknite na <a href='%1'>Administacija >> Sistemska podešavanja >> Odlazna pošta</a> da podesite odlaznu poštu."
 
 #: CRM/Core/Config.php
 msgid ""
 "There is no valid SMTP server Setting Or SendMail path setting. Click <a "
 "href='%1'>Administer >> System Setting >> Outbound Email</a> to set the "
 "OutBound Email."
-msgstr ""
+msgstr "Nema važećeg podešavanja SMTP servera ili sendmail putanje. Kliknite na <a href='%1'>Administacija >> Sistemska podešavanja >> Odlazna pošta</a> da podesite odlaznu poštu."
 
 #: CRM/Core/Config.php
 msgid ""
 "There is no valid SMTP server Setting Or sendMail path setting. Click <a "
 "href='%1'>Administer >> System Setting >> Outbound Email</a> to set the "
 "OutBound Email."
-msgstr ""
+msgstr "Nema važećeg podešavanja SMTP servera ili sendmail putanje. Kliknite na <a href='%1'>Administacija >> Sistemska podešavanja >> Odlazna pošta</a> da podesite odlaznu poštu."
 
 #: CRM/Core/Config.php
 msgid "Some modules define permissions, but the CMS cannot store them: %1"
@@ -7612,7 +7612,7 @@ msgstr "ID 2 entiteta"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Cachekey"
-msgstr ""
+msgstr "Cachekey"
 
 #: CRM/Core/DAO/PrintLabel.php
 msgid "Print Label ID"
@@ -10483,7 +10483,7 @@ msgstr ""
 
 #: CRM/Custom/Form/MoveField.php
 msgid "Destination"
-msgstr ""
+msgstr "Cilj"
 
 #: CRM/Custom/Form/MoveField.php CRM/Custom/Page/Field.php
 msgid "Move Custom Field"
@@ -10601,7 +10601,7 @@ msgstr ""
 
 #: CRM/Custom/Page/Group.php
 msgid "View and Edit Custom Fields"
-msgstr ""
+msgstr "Pregledaj i uredi sopstvena polja"
 
 #: CRM/Custom/Page/Group.php CRM/Import/Form/Preview.php
 #: CRM/Price/Page/Set.php CRM/UF/Page/Field.php CRM/UF/Page/Group.php
@@ -10848,7 +10848,7 @@ msgstr "Dodatne grupe za eksport"
 msgid ""
 "Please enter a value for %1 (merging > 2 contacts), or select a pre-"
 "configured option from the list."
-msgstr ""
+msgstr "Unesite vrednost za %1 (spajanje > 2 kontakta), ili izaberite prethodno podešenu opciju iz liste."
 
 #: CRM/Export/Form/Select.php
 msgid "Export All or Selected Fields"
