po: update po/it_IT/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/common-components.po
+++ b/po/it_IT/common-components.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Alessio <alessio@dba.it>, 2012
+# Angela Iussig <angela.iussig@gmail.com>, 2017
 # Antonio de Simone <desimone.webdesign@gmail.com>, 2012
 # Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Pietro De Nicolao <powerpdn@gmail.com>, 2013
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-15 07:34+0000\n"
-"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
+"PO-Revision-Date: 2017-02-08 15:46+0000\n"
+"Last-Translator: Angela Iussig <angela.iussig@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1806,7 +1807,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "Please print this confirmation for your records."
-msgstr ""
+msgstr "Per favore stampa questa email di conferma"
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
